20) xl2tpd update to 1.3.1 version.<br>
21) If kernel nvram module enabled need backup nvram only first boot and "SaveAndReboot" menu click.<br>
22) Add DMZNATLoopback variable. Enable disable NAT loopback for DMZ host (default disabled).<br>
23) Transmission up to 2.41 version.<br>
24) If DDNS is select need add ddns alias to /etc/hosts with wanip.<br>
25) Fix zcip script and zeroconf now work OK.<br>
26) Rework iptables logic for DMZ work in VPN mode.<br>
27) Net core, mm and fs subsystems some optimize.<br>
28) More correct reload ppp modules for 16Mb devices (Try fix PPE issue).<br>
29) No nedd remove ppp modules for 32Mb devices (Try fix PPE issue).<br>
30) Vpnhelper rework pppd down procedure (Try fix PPE issue).<br>
31) Net core dev hack for fix unregister ppp driver based to cardmap (Try fix PPE issue).<br>
32) If vlan_double_tag=0 use hardware vlan offload. Save ~10% cpu (after change variable need restart).<br>
33) Always use for pppoe/pptp/l2tp ifname=ppp0. Others ifaces must be start from ppp1.<br>
34) Fix work vpn at some ISP with small dhcp lease time.<br>
35) Kernel code cleanup.<br>
36) Add more values to enum ip_conntrack_info.<br>
37) Small fix in Software Fastnat.<br>
38) libupnp move to /lib dir from wscd.<br>
39) libupnp Update to 1.6.13 version.<br>
40) wscd now use new libupnp.<br>
41) USB-IPV6 images now use samba3.<br>
42) Remove USB without IPv6 images.<br>
43) Fix work iptv with DMZ enabled.<br>
44) Sysctl fix tune kernel for 16Mb, torrent enable or samba mode.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>